--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,10 @@
             <artifactId>graphql-java-extended-scalars</artifactId>
             <version>22.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
